# sam3x8e-rs

./: .travis.yml  Cargo.toml  README.md  deploy.sh  memory.x
.cargo/: config
sam3x8e/: Cargo.toml
sam3x8e-hal/: Cargo.toml  memory.x
sam3x8e-hal-codegen/: Cargo.toml
sam3x8e-hal-codegen/src/: lib.rs  pio.rs
sam3x8e-hal-codegen/src/pio/: pin.rs  pio.rs  pio_set.rs
sam3x8e-hal/examples/: blink-hal-syst-pll-42mhz.rs  blink-hal-syst-pll-84mhz.rs  blink-hal-syst-slow.rs  blink-hal-tc.rs  blink-watchdog.rs  timer.rs
sam3x8e-hal/src/: delay.rs  efc.rs  gpio.rs  lib.rs  pmc.rs  prelude.rs  rng.rs  time.rs  timer.rs  watchdog.rs
sam3x8e-hal/src/delay/: syst.rs  tc.rs
sam3x8e-hal/src/timer/: syst.rs
sam3x8e/examples/: blink.rs
src/: delay.rs  lib.rs
src/delay/: syst.rs  tc0.rs
