[package]
name = "sam3x8e-hal"
version = "0.1.0"
authors = ["Alex Zepeda <alex@inferiorhumanorgans.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
embedded-hal = "0.2.0"
nb = "0.1.2"
sam3x8e = { git = "https://github.com/inferiorhumanorgans/sam3x8e", branch = "all_pio"}
