[package]
name = "sam3x8e-hal-codegen"
version = "0.1.0"
authors = ["Alex Zepeda <alex@inferiorhumanorgans.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits", "full"] }
quote = "1.0"
Inflector = "*"
maplit = "*"
proc-macro2 = "1.0.2"
# lazy_static = "1.4.0"
